force-app/main/default/objects/loan__Coborrower__c/loan__Coborrower__c.object-meta.xml
<CustomObject>
    <label>Contract Party</label>
    <nameField>
        <displayFormat>CID-{000000000}</displayFormat>
        <label>Contract Party Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>