force-app/main/default/objects/loan__Coborrower__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <formula>IF(ISBLANK(loan__Contact__c),  IF( loan__Account__r.IsPersonAccount ==True,IF(ISBLANK(loan__Account__r.FirstName),&apos;&apos;,loan__Account__r.FirstName+&apos; &apos;)+IF(ISBLANK(loan__Account__r.MiddleName),&apos;&apos;,loan__Account__r.MiddleName+&apos; &apos;)+IF(ISBLANK(loan__Account__r.LastName),&apos;&apos;,loan__Account__r.LastName+&apos; &apos;), loan__Account__r.Name+&apos; &apos;) ,IF(ISBLANK(loan__Contact__r.FirstName),&apos;&apos;,loan__Contact__r.FirstName+&apos; &apos;)+IF(ISBLANK(loan__Contact__r.MiddleName),&apos;&apos;,loan__Contact__r.MiddleName+&apos; &apos;)+IF(ISBLANK(loan__Contact__r.LastName),&apos;&apos;,loan__Contact__r.LastName+&apos; &apos;))</formula>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>