force-app/main/default/objects/loan__Coborrower__c/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <formula>IF(NOT(ISBLANK(loan__Contact__r.OtherStreet)), loan__Contact__r.OtherStreet + BR(), NULL) +
IF(NOT(ISBLANK(loan__Contact__r.OtherCity)), loan__Contact__r.OtherCity , NULL) +
IF(NOT(ISBLANK(loan__Contact__r.OtherState)), &apos; &apos; + loan__Contact__r.OtherState, NULL) +
IF(NOT(ISBLANK(loan__Contact__r.OtherPostalCode)), &apos; &apos;+ loan__Contact__r.OtherPostalCode + BR(), NULL) +
IF(loan__Contact__r.OtherCountry != &apos;Australia&apos; &amp;&amp; loan__Contact__r.OtherCountry != &apos;AUSTRALIA&apos; &amp;&amp; loan__Contact__r.OtherCountry != &apos;AU&apos; &amp;&amp; NOT(ISBLANK(loan__Contact__r.OtherCountry)) , loan__Contact__r.OtherCountry, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Address</label>
    <type>Text</type>
</CustomField>