force-app/main/default/objects/loan__Coborrower__c/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <formula>loan__Contact__r.FirstName</formula>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>