force-app/main/default/objects/loan__Coborrower__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>TEXT(loan__Contact__r.Salutation) + &apos; &apos; + loan__Contact__r.FirstName + &apos; &apos; + loan__Contact__r.MiddleName + &apos; &apos; + loan__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>