force-app/main/default/objects/loan__Coborrower__c/fields/Contract_Individual_Party_Names__c.field-meta.xml
<CustomField>
    <fullName>Contract_Individual_Party_Names__c</fullName>
    <formula>loan__Loan__r.Individual_Borrower_Names__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Individual Party Names</label>
    <type>Text</type>
</CustomField>