force-app/main/default/objects/loan__Coborrower__c/fields/Contract_Security_Names__c.field-meta.xml
<CustomField>
    <fullName>Contract_Security_Names__c</fullName>
    <formula>loan__Loan__r.All_Security_Addresses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Security Names</label>
    <type>Text</type>
</CustomField>