force-app/main/default/objects/loan__Coborrower__c/fields/Customer_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Customer_Capacity__c</fullName>
    <label>Customer Capacity</label>
    <type>TextArea</type>
</CustomField>