force-app/main/default/objects/loan__Coborrower__c/fields/Dishonour_LPT_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dishonour_LPT_Amount__c</fullName>
    <label>Dishonour LPT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>