force-app/main/default/objects/loan__Coborrower__c/fields/Dishonour_LPT_Date__c.field-meta.xml
<CustomField>
    <fullName>Dishonour_LPT_Date__c</fullName>
    <label>Dishonour LPT Date</label>
    <type>Date</type>
</CustomField>