force-app/main/default/objects/loan__Coborrower__c/fields/loan__Party_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Party_Type__c</fullName>
    <description>Type of the Contract Party</description>
    <inlineHelpText>Type of the Contract Party</inlineHelpText>
    <label>Party Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Beneficiary Owner</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Co-applicant</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Director &amp; Shareholder</fullName>
            </value>
            <value>
                <fullName>Family Corporate Trustee</fullName>
            </value>
            <value>
                <fullName>Family Individual Trustee</fullName>
            </value>
            <value>
                <fullName>Guarantor</fullName>
            </value>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>Individual Investor</fullName>
            </value>
            <value>
                <fullName>Joint Individual Investor</fullName>
            </value>
            <value>
                <fullName>Joint Investor</fullName>
            </value>
            <value>
                <fullName>Shareholder</fullName>
            </value>
            <value>
                <fullName>SMSF Corporate Trustee</fullName>
            </value>
            <value>
                <fullName>SMSF Individual Trustee</fullName>
            </value>
            <value>
                <fullName>Solicitor</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Valuer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>